# ewlad

./: .gitignore  pyproject.toml
data/: catalogue.yaml
data/1_raw/params/: els.toml
scripts/: stage_files.py
