[project]
name = "ewlad"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "core",
    "pipeline",
    "staging",
    "loguru>=0.7.3",
    "duckdb>=1.4.1",
]

[tool.uv.sources]
core = { workspace = true }
pipeline = { workspace = true }
staging = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
